C2LLVMParser.py
# Generated from C2LLVM.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class C2LLVMParser ( Parser ):

    grammarFileName = "C2LLVM.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'#include'", "'<'", "'.'", "'>'", "'struct'", 
                     "'('", "')'", "','", "'*'", "'['", "']'", "'{'", "'}'", 
                     "';'", "'='", "'break'", "'return'", "'free'", "'continue'", 
                     "'scanf'", "'printf'", "'malloc'", "'sizeof'", "'if'", 
                     "'while'", "'else'", "'else if'", "'&&'", "'||'", "'int'", 
                     "'char'", "'+'", "'-'", "'/'", "'=='", "'!='", "<INVALID>", 
                     "<INVALID>", "'->'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "StrVar", "INT", "ARROW", "CHAR", "STRING", 
                      "Comment", "WS" ]

    RULE_start = 0
    RULE_include = 1
    RULE_struct = 2
    RULE_function = 3
    RULE_params = 4
    RULE_param = 5
    RULE_varPointer = 6
    RULE_array = 7
    RULE_packcontent = 8
    RULE_content = 9
    RULE_stat = 10
    RULE_declareStat = 11
    RULE_assignStat = 12
    RULE_breakStat = 13
    RULE_returnStat = 14
    RULE_freeStat = 15
    RULE_continueStat = 16
    RULE_scanfStat = 17
    RULE_printfStat = 18
    RULE_expr = 19
    RULE_arrayValue = 20
    RULE_funcExpr = 21
    RULE_pre = 22
    RULE_func = 23
    RULE_customFunc = 24
    RULE_actualParams = 25
    RULE_actualParam = 26
    RULE_mallocFunc = 27
    RULE_block = 28
    RULE_ifBlock = 29
    RULE_whileBlock = 30
    RULE_elseBlock = 31
    RULE_elseifBlock = 32
    RULE_condition = 33
    RULE_logic = 34
    RULE_varType = 35
    RULE_operator = 36

    ruleNames =  [ "start", "include", "struct", "function", "params", "param", 
                   "varPointer", "array", "packcontent", "content", "stat", 
                   "declareStat", "assignStat", "breakStat", "returnStat", 
                   "freeStat", "continueStat", "scanfStat", "printfStat", 
                   "expr", "arrayValue", "funcExpr", "pre", "func", "customFunc", 
                   "actualParams", "actualParam", "mallocFunc", "block", 
                   "ifBlock", "whileBlock", "elseBlock", "elseifBlock", 
                   "condition", "logic", "varType", "operator" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    StrVar=37
    INT=38
    ARROW=39
    CHAR=40
    STRING=41
    Comment=42
    WS=43

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def include(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(C2LLVMParser.IncludeContext)
            else:
                return self.getTypedRuleContext(C2LLVMParser.IncludeContext,i)


        def struct(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(C2LLVMParser.StructContext)
            else:
                return self.getTypedRuleContext(C2LLVMParser.StructContext,i)


        def function(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(C2LLVMParser.FunctionContext)
            else:
                return self.getTypedRuleContext(C2LLVMParser.FunctionContext,i)


        def getRuleIndex(self):
            return C2LLVMParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)




    def start(self):

        localctx = C2LLVMParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==C2LLVMParser.T__0:
                self.state = 74
                self.include()
                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 83
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 80
                    self.struct() 
                self.state = 85
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << C2LLVMParser.T__4) | (1 << C2LLVMParser.T__29) | (1 << C2LLVMParser.T__30))) != 0):
                self.state = 86
                self.function()
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IncludeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def StrVar(self, i:int=None):
            if i is None:
                return self.getTokens(C2LLVMParser.StrVar)
            else:
                return self.getToken(C2LLVMParser.StrVar, i)

        def getRuleIndex(self):
            return C2LLVMParser.RULE_include

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInclude" ):
                listener.enterInclude(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInclude" ):
                listener.exitInclude(self)




    def include(self):

        localctx = C2LLVMParser.IncludeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_include)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(C2LLVMParser.T__0)
            self.state = 93
            self.match(C2LLVMParser.T__1)
            self.state = 94
            self.match(C2LLVMParser.StrVar)
            self.state = 95
            self.match(C2LLVMParser.T__2)
            self.state = 96
            self.match(C2LLVMParser.StrVar)
            self.state = 97
            self.match(C2LLVMParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def StrVar(self):
            return self.getToken(C2LLVMParser.StrVar, 0)

        def packcontent(self):
            return self.getTypedRuleContext(C2LLVMParser.PackcontentContext,0)


        def getRuleIndex(self):
            return C2LLVMParser.RULE_struct

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStruct" ):
                listener.enterStruct(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStruct" ):
                listener.exitStruct(self)




    def struct(self):

        localctx = C2LLVMParser.StructContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_struct)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(C2LLVMParser.T__4)
            self.state = 100
            self.match(C2LLVMParser.StrVar)
            self.state = 101
            self.packcontent()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varType(self):
            return self.getTypedRuleContext(C2LLVMParser.VarTypeContext,0)


        def StrVar(self):
            return self.getToken(C2LLVMParser.StrVar, 0)

        def params(self):
            return self.getTypedRuleContext(C2LLVMParser.ParamsContext,0)


        def packcontent(self):
            return self.getTypedRuleContext(C2LLVMParser.PackcontentContext,0)


        def getRuleIndex(self):
            return C2LLVMParser.RULE_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction" ):
                listener.enterFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction" ):
                listener.exitFunction(self)




    def function(self):

        localctx = C2LLVMParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_function)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.varType()
            self.state = 104
            self.match(C2LLVMParser.StrVar)
            self.state = 105
            self.match(C2LLVMParser.T__5)
            self.state = 106
            self.params()
            self.state = 107
            self.match(C2LLVMParser.T__6)
            self.state = 108
            self.packcontent()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self):
            return self.getTypedRuleContext(C2LLVMParser.ParamContext,0)


        def params(self):
            return self.getTypedRuleContext(C2LLVMParser.ParamsContext,0)


        def getRuleIndex(self):
            return C2LLVMParser.RULE_params

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParams" ):
                listener.enterParams(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParams" ):
                listener.exitParams(self)




    def params(self):

        localctx = C2LLVMParser.ParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_params)
        try:
            self.state = 116
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 110
                self.param()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 111
                self.param()
                self.state = 112
                self.match(C2LLVMParser.T__7)
                self.state = 113
                self.params()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varType(self):
            return self.getTypedRuleContext(C2LLVMParser.VarTypeContext,0)


        def StrVar(self):
            return self.getToken(C2LLVMParser.StrVar, 0)

        def varPointer(self):
            return self.getTypedRuleContext(C2LLVMParser.VarPointerContext,0)


        def array(self):
            return self.getTypedRuleContext(C2LLVMParser.ArrayContext,0)


        def getRuleIndex(self):
            return C2LLVMParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)




    def param(self):

        localctx = C2LLVMParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_param)
        try:
            self.state = 123
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 118
                self.varType()
                self.state = 119
                self.match(C2LLVMParser.StrVar)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 121
                self.varPointer()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 122
                self.array()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarPointerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varType(self):
            return self.getTypedRuleContext(C2LLVMParser.VarTypeContext,0)


        def StrVar(self, i:int=None):
            if i is None:
                return self.getTokens(C2LLVMParser.StrVar)
            else:
                return self.getToken(C2LLVMParser.StrVar, i)

        def getRuleIndex(self):
            return C2LLVMParser.RULE_varPointer

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarPointer" ):
                listener.enterVarPointer(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarPointer" ):
                listener.exitVarPointer(self)




    def varPointer(self):

        localctx = C2LLVMParser.VarPointerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_varPointer)
        try:
            self.state = 137
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 125
                self.varType()
                self.state = 126
                self.match(C2LLVMParser.T__8)
                self.state = 127
                self.match(C2LLVMParser.StrVar)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 129
                self.varType()
                self.state = 130
                self.match(C2LLVMParser.StrVar)
                self.state = 131
                self.match(C2LLVMParser.T__8)
                self.state = 132
                self.match(C2LLVMParser.StrVar)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 134
                self.match(C2LLVMParser.StrVar)
                self.state = 135
                self.match(C2LLVMParser.T__8)
                self.state = 136
                self.match(C2LLVMParser.StrVar)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varType(self):
            return self.getTypedRuleContext(C2LLVMParser.VarTypeContext,0)


        def StrVar(self):
            return self.getToken(C2LLVMParser.StrVar, 0)

        def getRuleIndex(self):
            return C2LLVMParser.RULE_array

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArray" ):
                listener.enterArray(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArray" ):
                listener.exitArray(self)




    def array(self):

        localctx = C2LLVMParser.ArrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_array)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.varType()
            self.state = 140
            self.match(C2LLVMParser.StrVar)
            self.state = 141
            self.match(C2LLVMParser.T__9)
            self.state = 142
            self.match(C2LLVMParser.T__10)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PackcontentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def content(self):
            return self.getTypedRuleContext(C2LLVMParser.ContentContext,0)


        def getRuleIndex(self):
            return C2LLVMParser.RULE_packcontent

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPackcontent" ):
                listener.enterPackcontent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPackcontent" ):
                listener.exitPackcontent(self)




    def packcontent(self):

        localctx = C2LLVMParser.PackcontentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_packcontent)
        try:
            self.state = 149
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [C2LLVMParser.EOF, C2LLVMParser.T__4, C2LLVMParser.T__5, C2LLVMParser.T__12, C2LLVMParser.T__15, C2LLVMParser.T__16, C2LLVMParser.T__17, C2LLVMParser.T__18, C2LLVMParser.T__19, C2LLVMParser.T__20, C2LLVMParser.T__21, C2LLVMParser.T__23, C2LLVMParser.T__24, C2LLVMParser.T__25, C2LLVMParser.T__26, C2LLVMParser.T__29, C2LLVMParser.T__30, C2LLVMParser.StrVar, C2LLVMParser.INT, C2LLVMParser.CHAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 144
                self.content()
                pass
            elif token in [C2LLVMParser.T__11]:
                self.enterOuterAlt(localctx, 2)
                self.state = 145
                self.match(C2LLVMParser.T__11)
                self.state = 146
                self.content()
                self.state = 147
                self.match(C2LLVMParser.T__12)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ContentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def content(self):
            return self.getTypedRuleContext(C2LLVMParser.ContentContext,0)


        def stat(self):
            return self.getTypedRuleContext(C2LLVMParser.StatContext,0)


        def block(self):
            return self.getTypedRuleContext(C2LLVMParser.BlockContext,0)


        def getRuleIndex(self):
            return C2LLVMParser.RULE_content

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterContent" ):
                listener.enterContent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitContent" ):
                listener.exitContent(self)




    def content(self):

        localctx = C2LLVMParser.ContentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_content)
        try:
            self.state = 162
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 153
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [C2LLVMParser.T__4, C2LLVMParser.T__5, C2LLVMParser.T__15, C2LLVMParser.T__16, C2LLVMParser.T__17, C2LLVMParser.T__18, C2LLVMParser.T__19, C2LLVMParser.T__20, C2LLVMParser.T__21, C2LLVMParser.T__29, C2LLVMParser.T__30, C2LLVMParser.StrVar, C2LLVMParser.INT, C2LLVMParser.CHAR]:
                    self.state = 151
                    self.stat()
                    pass
                elif token in [C2LLVMParser.T__23, C2LLVMParser.T__24, C2LLVMParser.T__25, C2LLVMParser.T__26]:
                    self.state = 152
                    self.block()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 155
                self.content()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 159
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [C2LLVMParser.T__4, C2LLVMParser.T__5, C2LLVMParser.T__15, C2LLVMParser.T__16, C2LLVMParser.T__17, C2LLVMParser.T__18, C2LLVMParser.T__19, C2LLVMParser.T__20, C2LLVMParser.T__21, C2LLVMParser.T__29, C2LLVMParser.T__30, C2LLVMParser.StrVar, C2LLVMParser.INT, C2LLVMParser.CHAR]:
                    self.state = 157
                    self.stat()
                    pass
                elif token in [C2LLVMParser.T__23, C2LLVMParser.T__24, C2LLVMParser.T__25, C2LLVMParser.T__26]:
                    self.state = 158
                    self.block()
                    pass
                else:
                    raise NoViableAltException(self)

                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declareStat(self):
            return self.getTypedRuleContext(C2LLVMParser.DeclareStatContext,0)


        def assignStat(self):
            return self.getTypedRuleContext(C2LLVMParser.AssignStatContext,0)


        def breakStat(self):
            return self.getTypedRuleContext(C2LLVMParser.BreakStatContext,0)


        def returnStat(self):
            return self.getTypedRuleContext(C2LLVMParser.ReturnStatContext,0)


        def freeStat(self):
            return self.getTypedRuleContext(C2LLVMParser.FreeStatContext,0)


        def continueStat(self):
            return self.getTypedRuleContext(C2LLVMParser.ContinueStatContext,0)


        def customFunc(self):
            return self.getTypedRuleContext(C2LLVMParser.CustomFuncContext,0)


        def scanfStat(self):
            return self.getTypedRuleContext(C2LLVMParser.ScanfStatContext,0)


        def printfStat(self):
            return self.getTypedRuleContext(C2LLVMParser.PrintfStatContext,0)


        def getRuleIndex(self):
            return C2LLVMParser.RULE_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat" ):
                listener.enterStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat" ):
                listener.exitStat(self)




    def stat(self):

        localctx = C2LLVMParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_stat)
        try:
            self.state = 173
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 164
                self.declareStat()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 165
                self.assignStat()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 166
                self.breakStat()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 167
                self.returnStat()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 168
                self.freeStat()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 169
                self.continueStat()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 170
                self.customFunc()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 171
                self.scanfStat()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 172
                self.printfStat()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclareStatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varType(self):
            return self.getTypedRuleContext(C2LLVMParser.VarTypeContext,0)


        def StrVar(self):
            return self.getToken(C2LLVMParser.StrVar, 0)

        def varPointer(self):
            return self.getTypedRuleContext(C2LLVMParser.VarPointerContext,0)


        def arrayValue(self):
            return self.getTypedRuleContext(C2LLVMParser.ArrayValueContext,0)


        def getRuleIndex(self):
            return C2LLVMParser.RULE_declareStat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclareStat" ):
                listener.enterDeclareStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclareStat" ):
                listener.exitDeclareStat(self)




    def declareStat(self):

        localctx = C2LLVMParser.DeclareStatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_declareStat)
        try:
            self.state = 182
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 175
                self.varType()
                self.state = 176
                self.match(C2LLVMParser.StrVar)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 178
                self.varPointer()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 179
                self.arrayValue()
                self.state = 180
                self.match(C2LLVMParser.T__13)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignStatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(C2LLVMParser.ExprContext)
            else:
                return self.getTypedRuleContext(C2LLVMParser.ExprContext,i)


        def varType(self):
            return self.getTypedRuleContext(C2LLVMParser.VarTypeContext,0)


        def StrVar(self):
            return self.getToken(C2LLVMParser.StrVar, 0)

        def varPointer(self):
            return self.getTypedRuleContext(C2LLVMParser.VarPointerContext,0)


        def arrayValue(self):
            return self.getTypedRuleContext(C2LLVMParser.ArrayValueContext,0)


        def getRuleIndex(self):
            return C2LLVMParser.RULE_assignStat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignStat" ):
                listener.enterAssignStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignStat" ):
                listener.exitAssignStat(self)




    def assignStat(self):

        localctx = C2LLVMParser.AssignStatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_assignStat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 191
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.state = 184
                self.varType()
                self.state = 185
                self.match(C2LLVMParser.StrVar)
                pass

            elif la_ == 2:
                self.state = 187
                self.varPointer()
                pass

            elif la_ == 3:
                self.state = 188
                self.match(C2LLVMParser.StrVar)
                pass

            elif la_ == 4:
                self.state = 189
                self.arrayValue()
                pass

            elif la_ == 5:
                self.state = 190
                self.expr()
                pass


            self.state = 193
            self.match(C2LLVMParser.T__14)
            self.state = 194
            self.expr()
            self.state = 195
            self.match(C2LLVMParser.T__13)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BreakStatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return C2LLVMParser.RULE_breakStat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBreakStat" ):
                listener.enterBreakStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBreakStat" ):
                listener.exitBreakStat(self)




    def breakStat(self):
